# winalux

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  Makefile  README.md  ansible.cfg  galaxy.yml  pyproject.toml
.github/workflows/: ansible-lint.yml
inventory/: hosts.example.yml
meta/: main.yml  runtime.yml
playbooks/: build_multiarch.yml  deploy_dev.yml
roles/winalux/defaults/: main.yml
roles/winalux/files/: Containerfile
roles/winalux/tasks/: deploy_stack.yml  main.yml
roles/winalux/templates/: Taskfile.yml.j2  gatekeeper.sh.j2  monitor.sh.j2
