# @file pyproject.toml
# @package winalux-core
# @description
#   Python environment configuration for Winalux development.
#   Uses 'uv' for high-performance dependency management of Ansible tools.

[project]
name = "winalux"
version = "0.1.0"
description = "Profile-based isolated developer environments using Podman and VS Code."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "addonol" }
]
license = { text = "MIT" }
dependencies = [
    "pre-commit>=4.6.0",
]

[dependency-groups]
dev = [
    "ansible-core>=2.15.0",
    "ansible-lint>=24.2.0",
    "yamllint>=1.33.0",
    "rich>=13.7.0",
    "pre-commit"
]

[tool.ansible-lint]
exclude_paths = [
    ".venv/",
    "node_modules/",
]

[tool.yamllint]
max-line-length = 100
